# FairSoft

./: .gitignore  .gitmodules  BuildConfig.cmake  CMakeLists.txt  CTestConfig.cmake  DEPENDENCIES  Dart.sh  Dockerfile  FairSoftConfig.cmake  FairSoft_test.cmake  Jenkinsfile  README.md  alfaconfig.sh  auto_build.sh  auto_config.sh  automatic.conf  bootstrap-cmake.sh  configure.py  configure.sh  dependencies.md  grid.conf  make_clean.sh  params.conf  recoonly.conf  spack_dev-build.sh  thisfairsoft.sh
basics/: libsodium.patch
cmake/: FairSoftLib.cmake  FindZSTD.cmake  SetFairSoftFlags.cmake  fairsoft-config.in  legacy.cmake  legacy.conf.in  legacy_options.cmake  options.cmake  reclaim-diskspace.cmake  spack.cmake  spack_options.cmake
config/: packages.yaml
config/darwin/: packages.yaml
docs/: README.md  advanced.md  development.md  execution.md  installation.md  preparation.md  prerequisites.md  structure.md  troubleshooting.md
env/dev/: dds.yaml  fairlogger.yaml  fairroot_develop.yaml  jun19_fairroot-18.4.yaml  r3broot.yaml  sim_no-threads.yaml  sim_python_threads_no-x_no-opengl.yaml  sim_threads.yaml  sim_threads_no-x_no-opengl.yaml
env/jun19/: sim_no-threads.yaml  sim_python_no-threads.yaml  sim_python_threads.yaml  sim_threads.yaml
generators/: CMakeLists.txt_pythia6  UserPhysicsOptions.xml  pluto_v537_root6.patch  pythia6_infLoop.patch
legacy/: DEPENDENCIES  README.md  Vagrantfile  advanced.md  bootstrap-cmake.sh  configure.sh  dependencies.md  dependencies_macos.md  dialog.rc  grid.conf  make_clean.sh  options.md  recoonly.conf  setup-almalinux.sh  setup-archlinux.sh  setup-centos-7.sh  setup-debian.sh  setup-fedora.sh  setup-macos.sh  setup-opensuse.sh  setup-rockylinux.sh  setup-ubuntu.sh
legacy/basics/: 1.72_boost_process.patch  fairmq_fix_cpp17moveinsertable_assertion_xcode12.patch  fix_wn_bin_3.2_3.4.patch
legacy/boost/: PyEval_CallMethod_fix_python_3-13.patch  site-config.jam.in  support-numpy-2.patch
legacy/clhep/: add_missing_include_file.patch  allow_c++23.patch  clhep_cxx20.patch
legacy/dds/: add_missing_include.patch  allow_dds_ld_library_path_as_cmake_var.patch  dds_c++20.patch  fix_boost_lookup.patch  fix_deprecated_boost_filesystem.patch  relax_protobuf_requirement.patch
legacy/flatbuffers/: add_missing_include_file.patch  remove_werror.patch
legacy/geant3/: fix_cmake.patch  fix_string_handling_in_ertrak.patch
legacy/geant4/: fix_cmake.patch  fix_typo.patch  support_brewed_gl.patch
legacy/geant4_vmc/: fix_cmake.patch
legacy/generators/: add_missing_extern_keyword.patch
legacy/hepmc/: fix_cmake.patch
legacy/onnxruntime/: fix_gcc13_compilation.patch  fix_python_detection.patch  install_config_files.patch
legacy/pythia6/: fix_cmake.patch
legacy/pythia8/: pythia8_cxx20.patch
legacy/root/: add_missing_cstring_include.patch  add_xproofd_build_option.patch  dirty_stdatomic_h_fix.patch  fix_compilation_with_gcc12.patch  fix_compilation_with_gcc13.patch  fix_find_glew_cmake.patch  fix_ftgl.patch  fix_gcc15.patch  fix_macos_sdk_for_rootcling.patch  fix_macos_sdk_mismatch.patch  fix_macosx_clang17.patch  fix_macosx_findOpenGL.patch  fix_pyroot_cast_error_python_3_11.patch  fix_pyroot_code_h_inclusion_python_3_11.patch  fix_root_install_external_tars_with_cmake_3_24.patch  fix_rpath_info.patch  fix_strlcpy_if_glibc_gt_2.38.patch  fix_tpython_python_3_11_deprecation.patch  support_python_3.11.patch  update_xrootd_checksum.patch  xrootd_5_compat.patch
legacy/scripts/: CMakeLists.txt  first_menu.sh  install_DDS.sh  install_aliroot.sh  install_asiofi.sh  install_boost.sh  install_fairlogger.sh  install_fairmq.sh  install_flatbuffers.sh  install_geant3.sh  install_geant4.sh  install_geant4_data.sh  install_geant4_vmc.sh  install_gtest.sh  install_mesa.sh  install_nanomsg.sh  install_ofi.sh  install_protobuf.sh  install_pythia6.sh  install_pythia8.sh  install_root6.sh  install_vc.sh  install_vmc.sh  install_yamlcpp.sh  install_zeromq.sh  (+2 more)
patches/: README.md
scripts/: Test_CMakeLists.txt  check_system.sh  configure.in  fairsoft-config.in  first_menu.sh  functions.sh  install_DDS.sh  install_aliroot.sh  install_asiofi.sh  install_boost.sh  install_cmake.sh  install_evtgen.sh  install_fairlogger.sh  install_fairmq.sh  install_fairroot.sh  install_flatbuffers.sh  install_g4py.sh  install_geant3.sh  install_geant4.sh  install_geant4_data.sh  install_geant4_vmc.sh  install_genie.sh  install_gsl.sh  install_gtest.sh  install_hepmc.sh  install_icu.sh  install_jsroot.sh  install_lhapdf.sh  install_log4cpp.sh  install_mesa.sh  install_millepede.sh  install_msgpack.sh  install_nanomsg.sh  install_pdfset.sh  install_photos.sh  install_pluto.sh  install_protobuf.sh  install_pythia6.sh  install_pythia8.sh  install_root.sh  (+9 more)
test/: build-main-tests-common.sh  buildcleanup.sh  buildenv.sh  buildsetup.sh  buildsimple.sh  buildspec.sh  buildstart.sh  cmaketest.sh.in  jenkins_agent_lxbk0595.def  slurm-create-jobscript.sh  slurm-submit.sh  spack-pkg-sanity.sh  test-start-container.sh
test/container/: CMakeLists.txt  README.md  centos.7.def  debian.10.def  debian.11.def  debian.8.def  fedora.30.def  fedora.31.def  fedora.32.def  fedora.33.def  fedora.34.def  gsi-debian-8-gcc.yaml  gsi-debian-8.def  gsi-debian.8.def  opensuse.15.0.def  opensuse.15.1.def  opensuse.15.2.def  ubuntu.18.04.def  ubuntu.20.04.def
test/container/legacy/: CMakeLists.txt  fedora.32.def  linux-cmake.def.in  ubuntu.20.04.def
tools/: dds_compiler_fix.py  find_specs.py  root5_34_25_TGeo.patch  root5_34_find_xrootd.patch  root5_lzma.patch  root6_00_find_xrootd.patch  root6_16_xrootd.patch  root6_lzma.patch  root6_xrootd.patch  root_TKey.patch  root_pythonhistory.patch  rootconfig.sh  rootconfig_grid.sh  spack_dev-build.sh  xrootd_cmake.patch
transport/: Geant3_32bit.patch  Geant3_CMake.patch  Geant4_vmc_c++11.patch  g4py.patch  geant3_gfortran.patch  geant3_root6.patch  geant4.10.00.p02_cmake.patch  geant4.10.00_clang7_osx.patch  geant4.10.00_clang_osx.patch  geant4vmc_example.patch  geant4vmc_gcc5.patch  vgm_401.patch
vae/: thisvae.sh
vaesoft/: .gitmodules  thisvae.sh
(+62 files in other folders)
